# research-code

./: .gitignore  makefile  pyproject.toml  todo.md
notes/: nam_arch.md
src/ampnet/: F.py  bitmap.py  dataset.py  dataset_old.py  loader.py
src/ampnet/models/: blockrnn.py  celpnet.py  lookback_net.py  multi_scale.py  rnn.py  sinet.py  tcn.py
src/ampnet/modules/: activations.py  block_embed.py  fourier_embed.py  gated.py  iir.py  misc.py  wavenet_conv.py
src/ampnet/train/: losses.py  trainer.py
src/ampnet/utils/: audio.py  signal.py  train.py
test/: dbg.py  test_lookbacknet.py  test_modules.py  test_munet.py  test_signalutils.py
test/bench/: conv.py  lpc.py
